--- a/style.css
+++ b/style.css
@@ -4,10 +4,155 @@ font-weight: 400 e 700 */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 
 :root {
-    --backgrond: #000;
+    font-size: 62.5%;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: 0;
+}
+
+:root {
+    --background: #000;
     --text-color: #FFF;
     --button: #8257E5;
     --border: #29292E;
     --border-menu-mobile: #A8A8B3;
     --text-color-menu-mobile: #E1E1E6;
+}
+
+body {
+    background-color: var(--background);
+    font-family: 'Manrope', sans-serif;
+    display: flex;
+    justify-content: center;
+}
+
+.header-desktop {
+    position: absolute;
+    width: 100vw;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 5rem;
+}
+
+.header-mobile {
+    position: absolute;
+    width: 100vw;
+    padding: 3rem 0;
+    align-items: center;
+    display: none;
+    border-bottom: solid .1rem var(--border);
+    justify-content: space-around;
+}
+
+.header-mobile>img{
+    cursor: pointer;
+}
+
+nav>a {
+    font-weight: 400;
+    font-size: 1.4rem;
+    margin: 3.2rem;
+    color: var(--text-color);
+    border-bottom: solid .2rem transparent;
+    transition: .5s;
+}
+
+nav>a:hover {
+    border-bottom: solid .2rem var(--text-color);
+}
+
+.button-desktop, .button-mobile {
+    font-weight: 700;
+    font-size: 1.1rem;
+    height: 3.7rem;
+    width: 17.2rem;
+    color: var(--text-color);
+    background-color: transparent;
+    border: solid .1rem var(--button);
+    border-radius: .5rem;
+    text-transform: uppercase;
+    transition: .5s;
+    cursor: pointer;
+}
+
+.button-desktop:hover, .button-mobile:hover {
+    background-color: var(--button);
+}
+
+.background-desktop {
+    height: 100vh;
+    width: 100vw;
+    background: url(/RocketCoffee-Rocketseat/assets/rocket-coffee.png) no-repeat bottom center, url(/RocketCoffee-Rocketseat/assets/blur-1.png) no-repeat bottom left, url(/RocketCoffee-Rocketseat/assets/blur-2.png) no-repeat top right;
+}
+
+.background-mobile {
+    display: none;
+    height: 100vh;
+    width: 100vw;
+    background: url(/RocketCoffee-Rocketseat/assets/rocket-coffee.png) no-repeat bottom, url(/RocketCoffee-Rocketseat/assets/blur-mobile.png) no-repeat bottom;
+    background-size: contain, contain;
+}
+
+.title {
+    position: absolute;
+    font-weight: 700;
+    font-size: 8rem;
+    color: var(--text-color);
+    top: 15%;
+    left: 50%;
+    width: 100vw;
+    transform: translate(-50%);
+    text-align: center;
+}
+
+.header-title{
+    position: absolute;
+    top: 20%;
+    width: 80%;
+    display: none;
+    align-items: center;
+    flex-direction: column;
+}
+
+.button-mobile{
+    margin-top: 5rem;
+    background: url(/RocketCoffee-Rocketseat/assets/arrow.svg) no-repeat 90%;
+}
+
+#header-title{
+    color: var(--text-color);
+    font-size: 3rem;
+    font-weight: 400;
+    text-align: center;
+}
+
+#stroke {
+    top: 30%;
+    color: var(--background);
+    text-shadow: -.1rem -.1rem 0 var(--button), .1rem -.1rem 0 var(--button), -.1rem .1rem 0 var(--button), .1rem .1rem 0 var(--button);
+}
+
+@media screen and (max-width: 42.8rem) {
+    .background-desktop, .header-desktop {
+        display: none;
+    }
+
+    .background-mobile {
+        display: block;
+    }
+
+    .title {
+        font-size: 5rem;
+        bottom: 30%;
+        top: auto;
+    }
+
+    .header-mobile, .header-title {
+        display: flex;
+    }
 }
