--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
     height: 5rem;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     margin: 5vh;
 }
 
@@ -106,7 +106,6 @@ nav>a:hover {
 .nav-menu-desktop>a {
     height: 3em;
     margin: 0;
-    padding-left: 2em;
     font-size: 1.8em;
     font-weight: 700;
     border-top: solid .1rem var(--border);
@@ -122,9 +121,12 @@ nav>a:hover {
 .background-mobile {
     display: none;
     position: absolute;
+    bottom: 0;
     width: 100vw;
-    height: 100vh;
-    background: url(/RocketCoffee-Rocketseat/assets/rocket-coffee.png) no-repeat bottom, url(/RocketCoffee-Rocketseat/assets/blur-mobile.png) bottom no-repeat;
+    height: 100%;
+    background-image: url(/RocketCoffee-Rocketseat/assets/rocket-coffee.png), url(/RocketCoffee-Rocketseat/assets/blur-mobile.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
     background-size: contain;
 }
 
@@ -144,10 +146,11 @@ nav>a:hover {
     height: 4.8rem;
     width: 4.8rem;
     background: url(/RocketCoffee-Rocketseat/assets/menu-buguer-open.svg) no-repeat center;
+    cursor: pointer;
 }
 
 .main{
-    margin-top: 7vh;
+    margin-top: 10vh;
     position: relative;
     display: none;
     flex-flow: row wrap;
@@ -157,9 +160,9 @@ nav>a:hover {
 }
 
 .slogan{
-    padding: 5rem 4rem;
+    padding: 5vw 5vw;
     font-weight: 400;
-    font-size: 8vw;
+    font-size: 7vw;
     color: var(--text-color);
     text-align: center;
 }
@@ -186,7 +189,7 @@ nav>a:hover {
     margin-top: 5rem;
     display: none;
     position: absolute;
-    bottom: 25%;
+    top: 50%;
     font-weight: 700;
     font-size: 10vw;
     color: var(--text-color);
@@ -217,7 +220,7 @@ nav>a:hover {
     border-left: solid .5rem var(--button);
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 555px) {
     .background-mobile, .title-mobile{
         display: block;
     }
